Update package.json metadata for server and client
- Set proper package names: rentowl-server and rentowl-client
- Added description: "Smart Rent Management"
- Set author to "Brian Masheti"
- Ensured metadata matches project branding and README

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "server",
+  "name": "rentowl-server",
+  "description": "Smart Rent Management",
+  "author": "Brian Masheti",
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "commonjs",
