--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "client",
+  "name": "rentowl-client",
+  "description": "Smart Rent Management",
+  "author": "Brian Masheti",
   "private": true,
   "version": "0.0.0",
   "type": "module",
