--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "sharp": "^0.34.3",
+    "socket.io-client": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
