feat: finalize caretaker actions menu and super admin RBAC foundation
Landlord Dashboard:
- Remove redundant section title from Caretaker Actions for cleaner UI
- Ensure real-time caretaker activity log, filtering, export, and stats are production-ready
- Block admin/super admin/support logins from regular user login page for security

Super Admin:
- Implement secure, dedicated admin login at /admin/login
- Add admin management UI for creating, promoting, demoting, and assigning permissions to admin/support users
- Add backend RBAC: roles, permissions, and super-admin-only endpoints for admin management
- Add endpoint to list all admin/support/super admin users for dashboard display

This completes the MVP for the landlord client. Further super admin refinements and advanced features will be addressed in future versions.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ client/dist/
 server/dist/
 build/
 
+# Security: never commit admin creation scripts
+server/createSuperAdmin.js
+
 # Environment files
 .env
 .env.*
