feat: role management, checklist improvements, and admin UI updates
- Client
  ----
  - Integrated 'devops' role into admin management UI and dropdowns
  - Updated admin list to show only admin, support, devops, and super_admin roles
  - Removed caretakers from admin management UI
  - Improved checklist components for tenant check-in docs and role-based column visibility
  - Updated dashboards and sidebars for role-based navigation

- Server
  ----
  - Added 'devops' to user model and admin API queries
  - Updated /api/admin/all endpoint to include devops and super_admin roles
  - Refactored checklist controllers and routes for role-based data and legal document support
  - Updated .gitignore for sensitive scripts

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ build/
 
 # Security: never commit admin creation scripts
 server/createSuperAdmin.js
+server/resetUserPassword.js
+server/manageUserRole.js
 
 # Environment files
 .env
