feat: modernize admin management UI and UX
- Improved permissions selection with badge-style toggles and modern layout
- Added clear placeholder and label for admin role dropdown
- Enhanced input fields with labels, focus styles, and spacing
- Made permissions and actions columns visually compact and aligned
- Modal and table now more user-friendly and visually appealing
- General UI/UX polish for a professional admin experience

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ build/
 server/createSuperAdmin.js
 server/resetUserPassword.js
 server/manageUserRole.js
+server/addSuperAdminPermission.js
 
 # Environment files
 .env
