--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,10 +3,15 @@ FROM node:18
 
 WORKDIR /app
 
+# Install pnpm globally
+RUN npm install -g pnpm
+
 COPY package*.json ./
-RUN npm install --production
+COPY pnpm-lock.yaml ./
+RUN pnpm install --prod
 
 COPY . .
+COPY .env .env
 
 EXPOSE 5000
 CMD ["node", "src/server.js"]
