feat: dashboard improvements, property modals, and real activity data
- updated dashboard menu for better navigation
- added modal for editing properties
- added modal for deactivating properties
- updated recent activity section to receive and display real data
- improved CaretakerManagement and PropertyList components
- updated controllers and routes to support new activity features
- added Activity model and controller for tracking user actions

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,9 @@ $RECYCLE.BIN/
 # Other
 *.local
 
+# Ignore uploaded images and thumbnails
+server/uploads/*
+!server/uploads/.gitkeep
+server/uploads/thumbs/*
+!server/uploads/thumbs/.gitkeep
+
