--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "4.18.2",
+    "dotenv": "^17.2.1",    
+    "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "json2csv": "6.0.0-alpha.2",
@@ -28,7 +28,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "jest": "^29.0.0",
+    "jest": "latest",
     "nodemon": "^3.1.10",
     "supertest": "^6.3.0"
   }
