feat(payments+arrears): enhance rent arrears UI, secure backend, and payment logic
- Add color-coded “Type” badges (Rent/Security Deposit) to arrears table and mobile cards
- Add color-coded status badges for payment status (Unpaid, Paid, Partial, etc.)
- Show all key columns: Tenant, Contact, Property, Unit Type, Floor, Unit Label, Type, Due, Paid, Balance, Status, Due Date, Actions
- Make arrears table and cards clean, modern, and user-friendly for landlords
- Secure backend payment endpoints with role-based and ownership checks
- Update Payment model to support type, paymentMethod, transactionId, notes, and partial payments
- Add/secure endpoints for manual and digital payments, and receipts
- Add backfill script for existing tenants (server/backfillTenantPayments.js) and ignore it in .gitignore
- Ensure all payment and arrears logic is robust and ready for both landlord and tenant flows

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ server/createSuperAdmin.js
 server/resetUserPassword.js
 server/manageUserRole.js
 server/addSuperAdminPermission.js
+server/backfillTenantPayments.js
 
 # Environment files
 .env
