--- a/server/package.json
+++ b/server/package.json
@@ -11,19 +11,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",    
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "json2csv": "6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "sharp": "^0.34.3",
-    "socket.io-client": "^4.8.1",
+    "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
